# parley2

./: Cargo.toml
fontique/: Cargo.toml
fontique/src/: font.rs
fontique/src/collection/: query.rs
parley/: Cargo.toml
parley/src/: lib.rs
parley/src/pipeline/: element._old.rs  element_tree.rs  mod.rs
parley/src/pipeline/analysis/: font.rs  mod.rs
parley/src/pipeline/analysis/text/: bidi.rs  boundary.rs  mod.rs
parley/src/pipeline/segment/: bidi.rs  bidi2.rs  boundary.rs  cluster.rs  font.rs  mod.rs  script_bidi.rs
parley/src/style/: font.rs  mod.rs
