[package]
name = "parley"
version = "0.1.0"
description = "Parley provides an API for implementing rich text layout."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["system"]
std = ["fontique/std", "skrifa/std", "peniko/std"]
libm = ["fontique/libm", "skrifa/libm", "peniko/libm"]
# Enables support for system font backends
system = ["std", "fontique/system"]

[dependencies]
swash = "0.1.16"
skrifa = { workspace = true }
peniko = { workspace = true }
fontique = { workspace = true, features = ["icu_properties"] }
smallvec = { workspace = true }
icu_normalizer = "1.5.0"
icu_segmenter = "1.5.0"
icu_properties = "1.5.1"
